--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -33,6 +33,7 @@ jobs:
           run: npm test
           
         - name: Archive Test Result
+          if: failure() && steps.unit_testing.outcome == 'failure' || steps.unit_testing.outcome == 'success'
           uses: actions/upload-artifact@v3
           with:
             name: Mocha-Test-Result
