--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -47,6 +47,11 @@ jobs:
           - name: Checkout Repository
             uses: actions/checkout@v4
           
+          - name: Setup NodeJS Version
+            uses: actions/setup-node@v3
+            with:
+              node-version: 20
+
           - name: Install Dependencies
             run: npm install
     
