--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -56,11 +56,10 @@ jobs:
             run: npm install
     
           - name: Code-Coverage
-            id: code-coverage
+            continue-on-error: true
             run: npm run code-coverage
 
           - name: Archive Code Coverage
-            if: failure() && steps.unit_testing.outcome == 'failure' || steps.unit_testing.outcome == 'success'
             uses: actions/upload-artifact@v3
             with:
               name: Code-Coverage-Result
