--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -57,7 +57,7 @@ jobs:
     
           - name: Code-Coverage
             continue-on-error: true
-            run: npm run code-coverage
+            run: npm run coverage
 
           - name: Archive Code Coverage
             uses: actions/upload-artifact@v3
