--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -70,9 +70,29 @@ jobs:
               name: Code-Coverage-Result
               path: coverage
               retention-days: 5 
+  
+  docker:  
+    name: docker
+    runs-on: ubuntu_latest
 
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+                
+        - name: DockerHub Logins
+          uses: docker/login-action@v2.2.0
+          with:
+            registry: ghcr.io
+            username:  ${{  github.repository_owner }}
+            password:  ${{ secrets.GITHUB_TOKEN }} 
 
+        - name: Docker Build and Push
+          uses: docker/build-push-action@v4
+          with:
+              context: .
+              push:  true
+              tags:  ghcr.io/${{  github.repository_owner }}/solar-system:${{  github.sha }}   
+          
 
-
-        
+  
         
