Adding the jobs dependencies

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -74,6 +74,7 @@ jobs:
   docker:  
     name: docker
     runs-on: ubuntu_latest
+    needs: [unit-testing,code-coverage]
 
     steps:
         - name: Checkout Repository
