--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -73,7 +73,7 @@ jobs:
   
   docker:  
     name: docker
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     needs: [unit-testing,code-coverage]
 
     steps:
