--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -39,7 +39,7 @@ jobs:
           run: npm test
           
         - name: Archive Test Result
-          if: always()
+          continue-on-error: true
           uses: actions/upload-artifact@v3
           with:
             name: Mocha-Test-Result
