--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -75,7 +75,8 @@ jobs:
     name: docker
     runs-on: ubuntu-latest
     needs: [unit-testing,code-coverage]
-
+    permissions:
+      packages: write
     steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
