--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -96,7 +96,76 @@ jobs:
               context: .
               push:  true
               tags:  ghcr.io/${{  github.repository_owner }}/solar-system:${{  github.sha }}   
-          
+
+  dev-deploy:
+    name: Deployment to K8s dev Namespace
+    environment: 
+        name: development
+        url: https://${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
+    needs: docker
+    outputs:
+       APP_INGRESS_URL: ${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }} 
+    runs-on: ubuntu-latest
+    steps:
+
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+
+        - name: Install kubectl cli
+          uses: azure/setup-kubectl@v3
+          with:
+            version: 1.26.0
+        
+        - name: Adding kubeconfig
+          uses: azure/k8s-set-context:v3
+          with:
+            method: kubeconfig
+            kubeconfig: ${{ secrets.KUBECONFIG }}  
+        
+        # - name: Fetch K8s Cluster Details
+        #   run: |
+        #     kubectl version --short -o yaml
+        
+        # - name: Get Nginx Controller IP as Github Env Variable
+        #   run: |
+        #       echo "INGRESS_IP=$(kubectl -n ingress-nginx get svc ingress-nginx-controller -o jsonpath="{.status.loadbalancer.ingress[0].ip}")" >> $GITHUB_ENV    
+            
+        # - name:   Replace Token in Manifest files
+        #   uses: cschleiden/replace-tokens@v1
+        #   with:
+        #       tokenPrefix: '_{_'  #D depends what you declare in your file as the Prefix and Suffix
+        #       tokenSuffix: '_}_'
+        #       files: '["kubernetes/development/*.yaml"]' # Location where the manifests are
+        #   env:
+        #     NAMESPACE: ${{ vars.NAMESPACE }}
+        #     REPLICAS: ${{ vars.REPLICAS }}
+        #     IMAGE: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+        #     INGRESS_IP:  ${{ env.INGRESS_IP }}          
+
+        # - name: Checking Variables replacement
+        #   run: | 
+        #     cat kubernetes/development/*.yaml    
+
+        # - name: Create MongoDB Secret
+        #   run: |
+        #      kubectl -n ${{ vars.NAMESPACE}} create secret generic mongo-db-creds \
+        #       --from-literal=MONGO_URI=${{ env.MONGO_URI }} \
+        #       --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+        #       --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \    
+        #       --save-config \
+        #       --dry-run=client \
+        #       -o yaml | kubectl apply -f -
+
+        # - name: Deploy to dev env
+        #   run: |
+        #     kubectl apply -f kubernetes/development
+
+        # - name: Set App Ingress Host URL
+        #   id: set-ingress-host-address
+        #   run: |
+        #     echo "APP_INGRESS_HOST=$(kubectl -n${{ vars.NAMESPACE }} get ingress -o jsonpath="{.items[0].spec.tls[0].hosts[0]}")"  >> "$GITHUB_OUTPUT"                
+
+              
 
   
         
