--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -101,10 +101,7 @@ jobs:
     name: Deployment to K8s dev Namespace
     environment: 
         name: development
-        url: https://${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
     needs: docker
-    outputs:
-       APP_INGRESS_URL: ${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }} 
     runs-on: ubuntu-latest
     steps:
 
@@ -117,7 +114,7 @@ jobs:
             version: 1.26.0
         
         - name: Adding kubeconfig
-          uses: azure/k8s-set-context:v3
+          uses: azure/k8s-set-context@v3
           with:
             method: kubeconfig
             kubeconfig: ${{ secrets.KUBECONFIG }}  
