--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -86,16 +86,16 @@ jobs:
         - name: DockerHub Logins
           uses: docker/login-action@v2.2.0
           with:
-            registry: ghcr.io
-            username:  ${{  github.repository_owner }}
-            password:  ${{ secrets.GITHUB_TOKEN }} 
+            username:  ${{  vars.DOCKER_USERNAME }}
+            password:  ${{ secrets.DOCKER_PASSWORD }} 
+
 
         - name: Docker Build and Push
           uses: docker/build-push-action@v4
           with:
               context: .
               push:  true
-              tags:  ghcr.io/${{  github.repository_owner }}/solar-system:${{  github.sha }}   
+              tags:  ${{ vars.DOCKER_USERNAME }}/solar-system:${{  github.sha }}      
 
   dev-deploy:
     name: Deployment to K8s dev Namespace
