--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -123,25 +123,25 @@ jobs:
           run: |
             kubectl version --short -o yaml
         
-        # - name: Get Nginx Controller IP as Github Env Variable
-        #   run: |
-        #       echo "INGRESS_IP=$(kubectl -n ingress-nginx get svc ingress-nginx-controller -o jsonpath="{.status.loadbalancer.ingress[0].ip}")" >> $GITHUB_ENV    
+        - name: Get Nginx Controller IP as Github Env Variable
+          run: |
+              echo "INGRESS_IP=$(kubectl -n ingress-nginx get svc ingress-nginx-controller -o jsonpath="{.status.loadbalancer.ingress[0].ip}")" >> $GITHUB_ENV    
             
-        # - name:   Replace Token in Manifest files
-        #   uses: cschleiden/replace-tokens@v1
-        #   with:
-        #       tokenPrefix: '_{_'  #D depends what you declare in your file as the Prefix and Suffix
-        #       tokenSuffix: '_}_'
-        #       files: '["kubernetes/development/*.yaml"]' # Location where the manifests are
-        #   env:
-        #     NAMESPACE: ${{ vars.NAMESPACE }}
-        #     REPLICAS: ${{ vars.REPLICAS }}
-        #     IMAGE: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-        #     INGRESS_IP:  ${{ env.INGRESS_IP }}          
+        - name:   Replace Token in Manifest files
+          uses: cschleiden/replace-tokens@v1
+          with:
+              tokenPrefix: '_{_'  #D depends what you declare in your file as the Prefix and Suffix
+              tokenSuffix: '_}_'
+              files: '["kubernetes/development/*.yaml"]' # Location where the manifests are
+          env:
+            NAMESPACE: ${{ vars.NAMESPACE }}
+            REPLICAS: ${{ vars.REPLICAS }}
+            IMAGE: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            INGRESS_IP:  ${{ env.INGRESS_IP }}          
 
-        # - name: Checking Variables replacement
-        #   run: | 
-        #     cat kubernetes/development/*.yaml    
+        - name: Checking Variables replacement
+          run: | 
+            cat kubernetes/development/*.yaml    
 
         # - name: Create MongoDB Secret
         #   run: |
